--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(iTRAQ4)
 export(iTRAQ5)
 export(iTRAQ8)
 export(iTRAQ9)
+export(quantify_labelled_ms2)
 export(reporterNames)
 exportClasses(ReporterIons)
 exportMethods("[")
@@ -31,6 +32,7 @@ import(QFeatures)
 import(Spectra)
 importFrom(Biobase,description)
 importFrom(BiocGenerics,width)
+importFrom(BiocParallel,bplapply)
 importFrom(S4Vectors,DataFrame)
 importFrom(methods,new)
 importFrom(methods,setAs)
