--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,7 +22,6 @@ export(quantify_labelled_ms2)
 export(reporterNames)
 exportClasses(ReporterIons)
 exportMethods("[")
-exportMethods(description)
 exportMethods(length)
 exportMethods(mz)
 exportMethods(names)
@@ -30,10 +29,13 @@ exportMethods(show)
 exportMethods(width)
 import(QFeatures)
 import(Spectra)
-importFrom(Biobase,description)
 importFrom(BiocGenerics,width)
 importFrom(BiocParallel,bplapply)
+importFrom(MsCoreUtils,between)
 importFrom(S4Vectors,DataFrame)
+importFrom(S4Vectors,SimpleList)
+importFrom(SummarizedExperiment,SummarizedExperiment)
+importFrom(methods,as)
 importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,validObject)
