docs: ms3 quant man page

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(iTRAQ5)
 export(iTRAQ8)
 export(iTRAQ9)
 export(quantify_labelled_ms2)
+export(quantify_labelled_ms3)
 export(reporterNames)
 exportClasses(ReporterIons)
 exportMethods("[")
