--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export("reporterNames<-")
 export()
+export(QuantParam)
 export(ReporterIons)
 export(TMT10)
 export(TMT10ETD)
@@ -21,6 +22,7 @@ export(iTRAQ9)
 export(quantify_labelled_ms2)
 export(quantify_labelled_ms3)
 export(reporterNames)
+exportClasses(QuantParam)
 exportClasses(ReporterIons)
 exportMethods("[")
 exportMethods(length)
@@ -30,9 +32,11 @@ exportMethods(show)
 exportMethods(width)
 import(QFeatures)
 import(Spectra)
+importClassesFrom(ProtGenerics,Param)
 importFrom(BiocGenerics,width)
 importFrom(BiocParallel,bplapply)
 importFrom(MsCoreUtils,between)
+importFrom(ProtGenerics,quantify)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
 importFrom(SummarizedExperiment,SummarizedExperiment)
