--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(MsCoreUtils,between)
 importFrom(ProtGenerics,quantify)
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
+importFrom(S4Vectors,isEmpty)
 importFrom(SummarizedExperiment,SummarizedExperiment)
 importFrom(methods,as)
 importFrom(methods,new)
